Update website for new release

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -22,7 +22,7 @@ able to edit equations as fast as possible.</p>
 the webbrowser Firefox 3.</p>
 
 <p>The project has continued faster than expected. You can already try
-version 1.0.2. But be aware, that this version does not yet contain
+version 1.0.3. But be aware, that this version does not yet contain
 all features and may contain many bugs. It is not a production release,
 its intention is only to get feedback from potential users.</p>
 
@@ -31,14 +31,14 @@ its intention is only to get feedback from potential users.</p>
 demo</a>.</li>
 <li>Read the <a href="demo/doc/">documentation</a> or the 
 <a href="demo/doc/releasenotes.xhtml">release notes</a></li>
-<li>Download <a href="releases/gemse-1-0-2.zip">Gemse 1.0.2 as zip file</a></li>
+<li>Download <a href="releases/gemse-1-0-3.zip">Gemse 1.0.3 as zip file</a></li>
 </ul>
 
 <p>And the licence? I am not yet shure which licenses I am going to
 use. However, I am shure that Gemse will be available under multiple
 licences. GPL version 2 and 3 will definitely be an option.</p>
 
-<p>A list of relevant literature you can find on 
+<p>You can find a list of relevant literature on 
 <a href="./">Gemse's main page</a>.</p>
 
 <address>Author: <a href="mailto:urs@andonyar.com">Urs Holzer</a></address>
