Improved description of Gemse on website

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -34,12 +34,47 @@ demo</a>.</li>
 <li>Download <a href="releases/gemse-1-0-3.zip">Gemse 1.0.3 as zip file</a></li>
 </ul>
 
+<h2>What it is and what it is not</h2>
+
+<p>Gemse is an interactive editor for Presentation MathML, completely
+steered by keyboard. But let us look at that a bit more detailed:</p>
+
+<p>Presentation MathML is</p>
+
+<ul>
+<li>too verbose to edit using a text editor</li>
+<li>represents nicely the structure of a formula</li>
+<li>adapted to be used on the web</li>
+<li>by far not as powerful as LaTeX, since it is not a typesetting
+laguage</li>
+<li>does not encode the meaning of a formula, just its
+appeareance</li>
+<li>uses Unicode (so, no need to include
+some stupid package just to get that character)</li>
+</ul>
+
+<p>Gemse is</p>
+
+<ul>
+<li>completely controlled by keyboard, a mouse is useless</li>
+<li>similar to Vim</li>
+<li>uses Mozilla (only runs in Firefox 3 or higher at the moment)</li>
+<li>not mature, as it is a young project</li>
+<li>fun</li>
+</ul>
+
+<h2>Licence</h2>
+
 <p>And the licence? I am not yet shure which licenses I am going to
 use. However, I am shure that Gemse will be available under multiple
 licences. GPL version 2 and 3 will definitely be an option.</p>
 
+<h2>Relevant Literature</h2>
+
 <p>You can find a list of relevant literature on 
 <a href="./">Gemse's main page</a>.</p>
+
+<h2>The Author</h2>
 
 <address>Author: <a href="mailto:urs@andonyar.com">Urs Holzer</a></address>
 
