--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-      "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 plus MathML 2.0 plus SVG 1.1//EN"
+          "http://www.w3.org/2002/04/xhtml-math-svg/xhtml-math-svg.dtd" >
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
     <title>Gemse Approach 1</title>
