--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -15,16 +15,15 @@
 <p>Gemse Approach 1 is an editor for mathematical formulas using
 Presentation MathML. Unlike other editors, this one is neither intuitive
 nor easy to learn and you must have a basic understanding of
-Presentation MathML. It is controled with the keyboard only, its user
+Presentation MathML. It is controlled with the keyboard only, its user
 interface is highly inspired by the text editor vi. The goal is to be
 able to edit equations as fast as possible.</p>
 
 <p>Gemse Approach 1 is implemented in JavaScript using DOM. It runs in
 the webbrowser Firefox 3.</p>
 
-<p>The project has continued faster than expected. You can already try
-version 1.0.3. But be aware, that this version does not yet contain
-all features and may contain many bugs. It is not a production release,
+<p>Finally version 1.0.4 is ready with huge internal improvements.
+But be aware, that this version still is not a production release,
 its intention is only to get feedback from potential users.</p>
 
 <ul>
@@ -32,7 +31,7 @@ its intention is only to get feedback from potential users.</p>
 demo</a>.</li>
 <li>Read the <a href="demo/doc/">documentation</a> or the 
 <a href="demo/doc/releasenotes.xhtml">release notes</a></li>
-<li>Download <a href="releases/gemse-1-0-3.zip">Gemse 1.0.3 as zip file</a></li>
+<li>Download <a href="releases/gemse-1-0-4.zip">Gemse 1.0.4 as zip file</a></li>
 </ul>
 
 <h2>What it is and what it is not</h2>
