Fixed bug preventing XULRunner from starting
In editor.xhtml window.arguments can have length more than 0 without
window.arguments[0] being an array. So we also have to check wheter
window.arguments[0].forEach exists.

--- a/approach1/src_common/chrome/content/editor.xhtml
+++ b/approach1/src_common/chrome/content/editor.xhtml
@@ -46,7 +46,7 @@
             window.name = "globalGemseInstance";
 
             // Load MathML elements provided by arguments
-            if (window.arguments && window.arguments.length > 0) {
+            if (window.arguments && window.arguments.length > 0 && window.arguments[0].forEach) {
                 window.arguments[0].forEach(function (m) {
                     editor.loadFromOpenDocument(m.doc, m.element);
                 });
