--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -13,7 +13,7 @@
 <h1>Gemse, the General Math Structure Editor</h1>
 
 
-<p><strong><a href="approach1">Gemse 1.0.4</a> has been
+<p><strong><a href="approach1">Gemse 1.0.5</a> has been
 published!</strong></p>
 
 <p>The project Gemse has been started in the need for an editor
@@ -40,7 +40,7 @@ Also take a look at <a href="http://wme.cs.kent.edu/mathedit/">MathEdit</a>.</p>
 
 <ul>
 <li>Unicode Technical Note #28: 
-    <a href="http://www.unicode.org/notes/tn28/">Unicode Nearly Plain-Text Encoding of Mathematicsa</a></li>
+    <a href="http://www.unicode.org/notes/tn28/">Unicode Nearly Plain-Text Encoding of Mathematics</a></li>
 <li>Unicode Technical Report #25:
     <a href="http://www.unicode.org/reports/tr25/">Unicode Support for Mathematics</a></li>
 </ul>
