--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -22,9 +22,12 @@ able to edit equations as fast as possible.</p>
 <p>Gemse Approach 1 is implemented in JavaScript using DOM. It runs in
 the webbrowser Firefox 3 and in XULRunner 1.9.</p>
 
-<p>Version 1.0.5 can be easily installed as Firefox extension.
-But be aware, that this version still is not a production release,
-its intention is only to get feedback from potential users. Read the
+<p>Gemse finally has become a useful tool. The most important features
+have been implemented. However,
+the newest version still is not a production release,
+its intention is only to get feedback from interested users.</p>
+
+<p>Read the
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the <a
 href="demo/doc/index.xhtml">documentation</a>.</p>
 
@@ -33,20 +36,20 @@ href="demo/doc/index.xhtml">documentation</a>.</p>
 <p>You can choose from the following variants:</p>
 
 <ul>
-<li>If you are using Firefox 3, <a href="demo/editor.xhtml">try the
+<li>If you are using Firefox 3, <a href="demo/editor.xul">try the
 online demo</a>.</li>
-<li><a href="releases/gemseFirefoxExtension-1-0-5.xpi">Install Gemse as
+<li><a href="releases/gemseFirefoxExtension-1-0-6.xpi">Install Gemse as
 Firefox extension</a>. Then you can open it by
-visiting <code>chrome://gemse/content/editor.xhtml</code> and read its
+visiting <code>chrome://gemse/content/editor.xul</code> and read its
 documentation at <code>chrome://gemse/content/doc/index.xhtml</code>.</li>
-<li>Get <a href="releases/gemseXULRunnerApplication-1-0-5.zip">Gemse
+<li>Get <a href="releases/gemseXULRunnerApplication-1-0-6.zip">Gemse
 as XULRunner application</a> and run it with XULRunner 1.9.</li>
-<li>Use the <a href="releases/gemseMinimal-1-0-5.zip">minimal version</a> with 
+<li>Use the <a href="releases/gemseMinimal-1-0-6.zip">minimal version</a> with 
 less weird directory structure, intended to be
 run outside of Firefox chrome, like the demo. Just unzip it and open
-<code>editor.xhtml</code> in Firefox. (If you do that, not
+<code>editor.xul</code> in Firefox. (If you do that, not
 all commands will work since Firefox prevents access to your system.)</li>
-<li>Get the <a href="releases/gemse_src-1-0-5.tar.gz">whole source</a>. (As
+<li>Get the <a href="releases/gemse_src-1-0-6.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
 </ul>
@@ -88,7 +91,7 @@ some stupid package just to get that character)</li>
 
 <h2>Licence</h2>
 
-<p>And the licence? I am not yet shure which licenses I am going to
+<p>And the licence? I am not yet shure which licences I am going to
 use. However, I am shure that Gemse will be available under multiple
 licences. GPL version 2 and 3 will definitely be an option.</p>
 
