Put current version number on website
approach1.xhtml was missing the version number of the current release.

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -27,7 +27,7 @@ have been implemented. However,
 the newest version still is not a production release,
 its intention is only to get feedback from interested users.</p>
 
-<p>Read the
+<p>The current release is 1.0.6. Read the
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the <a
 href="demo/doc/index.xhtml">documentation</a>.</p>
 
