--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -27,9 +27,12 @@ have been implemented. However,
 the newest version still is not a production release,
 its intention is only to get feedback from interested users.</p>
 
-<p>The current release is 1.0.6. Read the
-<a href="demo/doc/releasenotes.xhtml">release notes</a> or the <a
-href="demo/doc/index.xhtml">documentation</a>.</p>
+<p>Unexpectedly, limitted support for Content MathML made it into
+Release 1.0.7.</p>
+
+<p>The current release is 1.0.7. Read the
+<a href="demo/doc/releasenotes.xhtml">release notes</a> or the 
+<a href="demo/doc/index.xhtml">documentation</a>.</p>
 
 <h2>Download and install</h2>
 
@@ -38,18 +41,18 @@ href="demo/doc/index.xhtml">documentation</a>.</p>
 <ul>
 <li>If you are using Firefox 3, <a href="demo/editor.xul">try the
 online demo</a>.</li>
-<li><a href="releases/gemseFirefoxExtension-1-0-6.xpi">Install Gemse as
+<li><a href="releases/gemseFirefoxExtension-1-0-7.xpi">Install Gemse as
 Firefox extension</a>. Then you can open it by
 visiting <code>chrome://gemse/content/editor.xul</code> and read its
 documentation at <code>chrome://gemse/content/doc/index.xhtml</code>.</li>
-<li>Get <a href="releases/gemseXULRunnerApplication-1-0-6.zip">Gemse
+<li>Get <a href="releases/gemseXULRunnerApplication-1-0-7.zip">Gemse
 as XULRunner application</a> and run it with XULRunner 1.9.</li>
-<li>Use the <a href="releases/gemseMinimal-1-0-6.zip">minimal version</a> with 
+<li>Use the <a href="releases/gemseMinimal-1-0-7.zip">minimal version</a> with 
 less weird directory structure, intended to be
 run outside of Firefox chrome, like the demo. Just unzip it and open
 <code>editor.xul</code> in Firefox. (If you do that, not
 all commands will work since Firefox prevents access to your system.)</li>
-<li>Get the <a href="releases/gemse_src-1-0-6.tar.gz">whole source</a>. (As
+<li>Get the <a href="releases/gemse_src-1-0-7.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
 </ul>
