--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -13,7 +13,7 @@
 <h1>Gemse, the General Math Structure Editor</h1>
 
 
-<p><strong><a href="approach1">Gemse 1.0.7</a> has been
+<p><strong><a href="approach1">Gemse 1.0.8</a> has been
 published!</strong></p>
 
 <p>The project Gemse has been started in the need for an editor
@@ -24,17 +24,18 @@ keyboard only.</p>
 
 <p>Actually, the first approach to this problem,
 "<a href="approach1">Gemse Approach 1</a>",
-is an editor for Presentation MathML. (This means that you can
-edit how a formula looks. It does not capture the meaning, so no
-Content MathML over here.)
+is an editor for Presentation MathML. It also has some limited
+abilities to edit Content MathML.
 It is currently in development.</p>
 
 <h2>Other solutions</h2>
 
-<p>If you are looking for an editor that catches the semantics of
-a formula, you should consider 
-<a href="http://www.matracas.net/sentido/index.html">Sentido</a>.
-Also take a look at <a href="http://wme.cs.kent.edu/mathedit/">MathEdit</a>.</p>
+<p>You can find other solutions on the
+<a href="http://www.w3.org/Math/Software/">software list</a> of the
+W3C. Additionally there is
+<a href="http://www.matracas.net/sentido/index.html">Sentido</a>
+which is used for example in the editor of SWIM 
+(<a href="http://swim.kwarc.info/">test it</a>).</p>
 
 <h2>Literature</h2>
 
