Mention public git repository
The public git repository is located at
http://www.andonyar.com/rec/2008-12/gemse/repo/gemse_public.git
This information is placed in approach1.xhtml and in the doap
description in A.rdf.

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -53,6 +53,8 @@ all commands will work since Firefox prevents access to your system.)</li>
 <li>Get the <a href="releases/gemse_src-1-0-8.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
+<li>Clone the <a href="http://git-scm.com/">git</a> repository from 
+<code>http://www.andonyar.com/rec/2008-12/gemse/repo/gemse_public.git</code></li>
 </ul>
 
 <p>Please be aware that Gemse is not yet mature, so it could cause
