Added licence information to most files: GPL3

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -94,9 +94,15 @@ some stupid package just to get that character)</li>
 
 <h2>Licence</h2>
 
-<p>And the licence? I am not yet shure which licences I am going to
-use. However, I am shure that Gemse will be available under multiple
-licences. GPL version 2 and 3 will definitely be an option.</p>
+<p>Gemse is licenced under the GPL Version 3 or later. You can 
+<a href="http://www.gnu.org/licenses/gpl.html">get information 
+about this license</a> on the GNU website. A copy of the license text
+is shipped together with Gemse.</p>
+
+<p>If you like to have different license terms, please contact the
+author. Gemse depends on libraries licenced under the GPL, so these
+dependencies have to be removed if you want to distribute Gemse under
+antother licence.</p>
 
 <h2>Relevant Literature</h2>
 
