Added roadmap to website

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -92,6 +92,36 @@ some stupid package just to get that character)</li>
 <li>fun</li>
 </ul>
 
+<h2>Roadmap</h2>
+
+<p>For the 1.0 branch, all planned features have been implemented. From
+now on, only small things will be added and bugs will be fixed. Some
+of them are</p>
+
+<ul>
+    <li>Fix saving and loading of files</li>
+    <li>Add important commands, mainly to the insert modes</li>
+    <li>Add a way to load external notations for NTNView</li>
+</ul>
+
+<p>For the 1.1 branch, the following is planned:</p>
+
+<ul>
+    <li>Improve speed by checking out the following ideas:
+        <ul>
+            <li>Change the style sheets such that the matching of the
+                rules is much quicker</li>
+            <li>Try to do the construction of the views in parallel, using threads</li>
+            <li>Instead of recreating the internal datastructures of
+                the views from scratch, just change what needs to be
+                changed</li>
+        </ul>
+    </li>
+    <li>Support for command line arguments</li>
+    <li>Reimplement undo/redo</li>
+    <li>Drastically improve code quality</li>
+</ul>
+
 <h2>Licence</h2>
 
 <p>Gemse is licenced under the GPL Version 3 or later. You can 
