--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -24,8 +24,7 @@ keyboard only.</p>
 
 <p>Actually, the first approach to this problem,
 "<a href="approach1">Gemse Approach 1</a>",
-is an editor for Presentation MathML. It also has some limited
-abilities to edit Content MathML.
+is an editor for Presentation and Content MathML.
 It is currently in development.</p>
 
 <h2>Other solutions</h2>
