Mention Trac site on website

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -63,6 +63,13 @@ files without asking when you save an equation. However, if you use
 the demo or the minimal version, you are save, since Firefox prevents access to your
 system.</p>
 
+<h2>Bugs and more Help: <a href="https://trac.mathweb.org/gemse/">Trac site</a></h2>
+
+<p>If you want to learn more about Gemse than the documentation
+bundled with Gemse can teach you, take a look at 
+<a href="https://trac.mathweb.org/gemse/">Gemse's Trac site</a>.
+There you can also send in bug reports.</p>
+
 <h2>What it is and what it is not</h2>
 
 <p>Gemse is an interactive editor for Presentation MathML, completely
