Link to Trac on website
A link to the Trac has been added near the links to the release notes
and documentation.

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -30,7 +30,8 @@ its intention is only to get feedback from interested users.</p>
 
 <p>The current release is 1.0.11. Read the
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the 
-<a href="demo/doc/index.xhtml">documentation</a>.</p>
+<a href="demo/doc/index.xhtml">documentation</a>.
+Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>.</p>
 
 <h2>Download and install</h2>
 
