Added note about CMTC on webpage

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -33,6 +33,13 @@ its intention is only to get feedback from interested users.</p>
 <a href="demo/doc/index.xhtml">documentation</a>.
 Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>.</p>
 
+<h2>Content Math Training Camp at the CICM</h2>
+
+<p>Gemse will be presented during the 
+<a href="http://cicm2010.cnam.fr/cmtc/">Content Math Training
+Camp</a> at the <a href="http://cicm2010.cnam.fr/">CICM</a> in Paris
+from the 5th to the 9th July.</p>
+
 <h2>Download and install</h2>
 
 <p>You can choose from the following variants:</p>
