Documented OpenMath support
Documented the new features of the content insert mode and the ability
to load any subtree of any document (global option loadAnyAsRoot). The
tutorial has been updated as well. The website has been updated to
mention support of OpenMath.

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -13,10 +13,10 @@
 <h1>Gemse Approach 1: An editor for Presentation and Content MathML</h1>
 
 <p>Gemse Approach 1 is an editor for mathematical formulas using
-Presentation or Content MathML.
+Presentation MathML, Content MathML or OpenMath.
 Unlike other editors, this one is neither intuitive
 nor easy to learn and you must have a basic understanding of
-MathML. It is controlled with the keyboard only, its user
+MathML or OpenMath. It is controlled with the keyboard only, its user
 interface is highly inspired by the text editor vi. The goal is to be
 able to edit equations as fast as possible.</p>
 
@@ -32,13 +32,6 @@ its intention is only to get feedback from interested users.</p>
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the 
 <a href="demo/doc/index.xhtml">documentation</a>.
 Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>.</p>
-
-<h2>Content Math Training Camp at the CICM</h2>
-
-<p>Gemse will be presented during the 
-<a href="http://cicm2010.cnam.fr/cmtc/">Content Math Training
-Camp</a> at the <a href="http://cicm2010.cnam.fr/">CICM</a> in Paris
-from the 5th to the 9th July.</p>
 
 <h2>Download and install</h2>
 
@@ -81,7 +74,7 @@ There you can also send in bug reports.</p>
 
 <h2>What it is and what it is not</h2>
 
-<p>Gemse is an interactive editor for Presentation MathML, completely
+<p>Gemse is an interactive editor for MathML and OpenMath, completely
 steered by keyboard. But let us look at that a bit more detailed:</p>
 
 <p>Presentation MathML</p>
@@ -98,15 +91,14 @@ appearance</li>
 some stupid package just to get that character)</li>
 </ul>
 
-<p>Content MathML</p>
+<p>Content MathML and OpenMath (which are very similar)</p>
 
 <ul>
-<li>represents the meaning of a formula, not its appearance</li>
+<li>represent the meaning of a formula, not its appearance</li>
 <li>can be automatically converted to Presentation MathML in most
 situations, given there are useful notation definitions</li>
 <li>can be cumbersome to edit by hand, since you easily loose the
 overview. Gemse helps here a little.</li>
-<li>is very similar to OpenMath</li>
 </ul>
 
 <p>Gemse</p>
@@ -114,8 +106,8 @@ overview. Gemse helps here a little.</li>
 <ul>
 <li>is completely controlled by keyboard, a mouse is useless</li>
 <li>is similar to Vim</li>
-<li>uses Mozilla (only runs in Firefox 3 or higher at the moment)</li>
-<li>is not mature, as it is a young project</li>
+<li>uses Mozilla</li>
+<li>is not mature, as it is a young project (but it makes progress)</li>
 <li>is fun</li>
 </ul>
 
