--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -28,7 +28,7 @@ have been implemented. However,
 the newest version still is not a production release,
 its intention is only to get feedback from interested users.</p>
 
-<p>The current release is 1.0.12. Read the
+<p>The current release is 1.0.13. Read the
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the 
 <a href="demo/doc/index.xhtml">documentation</a>.
 Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>.</p>
@@ -40,23 +40,26 @@ Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>
 <ul>
 <li>If you are using Firefox 3, <a href="demo/editor.xul">try the
 online demo</a>.</li>
-<li><a href="releases/gemseFirefoxExtension-1-0-12.xpi">Install Gemse as
+<li><a href="releases/gemseFirefoxExtension-1-0-13.xpi">Install Gemse as
 Firefox extension</a>. Then you can open it by
 visiting <code>chrome://gemse/content/editor.xul</code> and read its
 documentation at <code>chrome://gemse/content/doc/index.xhtml</code>.</li>
-<li>Get <a href="releases/gemseXULRunnerApplication-1-0-12.zip">Gemse
+<li>Get <a href="releases/gemseXULRunnerApplication-1-0-13.zip">Gemse
 as XULRunner application</a> and run it with XULRunner 1.9.</li>
-<li>Use the <a href="releases/gemseMinimal-1-0-12.zip">minimal version</a> with 
+<li>Use the <a href="releases/gemseMinimal-1-0-13.zip">minimal version</a> with 
 less weird directory structure, intended to be
 run outside of Firefox chrome, like the demo. Just unzip it and open
 <code>editor.xul</code> in Firefox. (If you do that, not
 all commands will work since Firefox prevents access to your system.)</li>
-<li>Get the <a href="releases/gemse_src-1-0-12.tar.gz">whole source</a>. (As
+<li>Get the <a href="releases/gemse_src-1-0-13.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
 <li>Clone the <a href="http://git-scm.com/">git</a> repository from 
 <code>http://www.andonyar.com/rec/2008-12/gemse/repo/gemse_public.git</code></li>
 </ul>
+
+<p><em>Note:</em> Firefox can not yet find updates of Gemse on its own, so you
+have to check this page periodically. I will hopefully get around to fix that soon.</p>
 
 <p><em>Important:</em> Loading and saving of equations has been
 reimplemented not long ago, so it may be buggy. Please be
