Updated website and release information

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -21,14 +21,14 @@ interface is highly inspired by the text editor vi. The goal is to be
 able to edit equations as fast as possible.</p>
 
 <p>Gemse Approach 1 is implemented in JavaScript using DOM. It runs in
-the webbrowser Firefox 3 or 4 and in XULRunner 1.9.</p>
+the webbrowser Firefox 3 or 4 and in XULRunner 1.9 or 2.0.</p>
 
 <p>Gemse finally has become a useful tool. The most important features
 have been implemented. However,
 the newest version still is not a production release,
 its intention is only to get feedback from interested users.</p>
 
-<p>The current release is 1.0.14. Read the
+<p>The current release is 1.0.15. Read the
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the 
 <a href="demo/doc/index.xhtml">documentation</a>.
 Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>.</p>
@@ -40,18 +40,18 @@ Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>
 <ul>
 <li>If you are using Firefox 3 or 4, <a href="demo/editor.xul">try the
 online demo</a>.</li>
-<li><a href="releases/gemseFirefoxExtension-1-0-14.xpi">Install Gemse as
+<li><a href="releases/gemseFirefoxExtension-1-0-15.xpi">Install Gemse as
 Firefox extension</a>. Then you can open it by
 visiting <code>chrome://gemse/content/editor.xul</code> and read its
 documentation at <code>chrome://gemse/content/doc/index.xhtml</code>.</li>
-<li>Get <a href="releases/gemseXULRunnerApplication-1-0-14.zip">Gemse
-as XULRunner application</a> and run it with XULRunner 1.9.</li>
-<li>Use the <a href="releases/gemseMinimal-1-0-14.zip">minimal version</a> with 
+<li>Get <a href="releases/gemseXULRunnerApplication-1-0-15.zip">Gemse
+as XULRunner application</a> and run it with XULRunner 1.9 or 2.0.</li>
+<li>Use the <a href="releases/gemseMinimal-1-0-15.zip">minimal version</a> with 
 less weird directory structure, intended to be
 run outside of Firefox chrome, like the demo. Just unzip it and open
 <code>editor.xul</code> in Firefox. (If you do that, not
 all commands will work since Firefox prevents access to your system.)</li>
-<li>Get the <a href="releases/gemse_src-1-0-14.tar.gz">whole source</a>. (As
+<li>Get the <a href="releases/gemse_src-1-0-15.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
 <li>Clone the <a href="http://git-scm.com/">git</a> repository from 
