Updated website for next release

--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -13,7 +13,7 @@
 <h1>Gemse, the General Math Structure Editor</h1>
 
 
-<p><strong><a href="approach1">Gemse 1.0.15</a> has been
+<p><strong><a href="approach1">Gemse 1.0.16</a> has been
 published!</strong></p>
 
 <p>The project Gemse has been started in the need for an editor
@@ -27,14 +27,18 @@ keyboard only.</p>
 is an editor for Presentation MathML, Content MathML and OpenMath.
 It is currently in development.</p>
 
+<h2>Version 2</h2>
+
+<p>The second version of Gemse is being planned. It will be a complete
+reimplementation and it will be capable of editing whole HTML and
+OMDoc documents. Gemse 2 will likely not use Mozilla and its ever
+lasting enforced updates, breaking APIs, and JavaScript imposition.</p>
+
 <h2>Other solutions</h2>
 
 <p>You can find other solutions on the
 <a href="http://www.w3.org/Math/Software/">software list</a> of the
-W3C. Additionally there is
-<a href="http://www.matracas.net/sentido/index.html">Sentido</a>
-which is used for example in the editor of SWIM 
-(<a href="http://swim.kwarc.info/">test it</a>).</p>
+W3C.</p>
 
 <h2>Literature</h2>
 
