--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -21,16 +21,18 @@ interface is highly inspired by the text editor vi. The goal is to be
 able to edit equations as fast as possible.</p>
 
 <p>Gemse Approach 1 is implemented in JavaScript using DOM. It runs in
-the webbrowser Firefox 3 or 4 and in XULRunner 1.9 or 2.0.</p>
+the webbrowser Firefox XULRunner. (In both cases, version 10
+is recommended but older or newer releases maybe work as well.)</p>
 
-<p>Gemse finally has become a useful tool. The most important features
-have been implemented. However,
-the newest version still is not a production release,
-its intention is only to get feedback from interested users.</p>
+<p>Gemse finally has become a useful tool. All planned features for
+version 1 have been implemented. However, there are many bugs for
+sure.</p>
 
-<p>The current release is 1.0.15. Read the
+<p>The current release is 1.0.16. Read the
 <a href="demo/doc/releasenotes.xhtml">release notes</a> or the 
-<a href="demo/doc/index.xhtml">documentation</a>.
+<a href="demo/doc/index.xhtml">documentation</a>. (Unfortunately, the
+tutorial can not be read even on Firefox, because Mozilla deactivated
+remote XUL.)
 Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>.</p>
 
 <h2>Download and install</h2>
@@ -38,35 +40,24 @@ Visit the <a href="https://trac.mathweb.org/gemse/">wiki and the bug tracker</a>
 <p>You can choose from the following variants:</p>
 
 <ul>
-<li>If you are using Firefox 3 or 4, <a href="demo/editor.xul">try the
-online demo</a>.</li>
-<li><a href="releases/gemseFirefoxExtension-1-0-15.xpi">Install Gemse as
+<li><a href="releases/gemseFirefoxExtension-1-0-16.xpi">Install Gemse as
 Firefox extension</a>. Then you can open it by
 visiting <code>chrome://gemse/content/editor.xul</code> and read its
 documentation at <code>chrome://gemse/content/doc/index.xhtml</code>.</li>
-<li>Get <a href="releases/gemseXULRunnerApplication-1-0-15.zip">Gemse
-as XULRunner application</a> and run it with XULRunner 1.9 or 2.0.</li>
-<li>Use the <a href="releases/gemseMinimal-1-0-15.zip">minimal version</a> with 
-less weird directory structure, intended to be
-run outside of Firefox chrome, like the demo. Just unzip it and open
-<code>editor.xul</code> in Firefox. (If you do that, not
-all commands will work since Firefox prevents access to your system.)</li>
-<li>Get the <a href="releases/gemse_src-1-0-15.tar.gz">whole source</a>. (As
+<li>Get <a href="releases/gemseXULRunnerApplication-1-0-16.zip">Gemse
+as XULRunner application</a> and run it with XULRunner.</li>
+<li>Get the <a href="releases/gemse_src-1-0-16.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
 <li>Clone the <a href="http://git-scm.com/">git</a> repository from 
 <code>http://www.andonyar.com/rec/2008-12/gemse/repo/gemse_public.git</code></li>
 </ul>
 
-<p><em>Note:</em> Firefox can not yet find updates of Gemse on its own, so you
-have to check this page periodically. I will hopefully get around to fix that soon.</p>
+<p>(Unfortunately, since Mozilla deactivated remote XUL, the online
+version and the minimal version are no longer available.)</p>
 
-<p><em>Important:</em> Loading and saving of equations has been
-reimplemented not long ago, so it may be buggy. Please be
-careful and make a backup of your document before you edit it with
-Gemse. Also, please report any misfeatures back to me.
-However, if you use the demo or the minimal version, you are on the
-save side, since Firefox prevents access to your system.</p>
+<p><em>Note:</em> Gemse does not look for updates automatically, so you
+have to check this page periodically.</p>
 
 <h2>Bugs and more Help: <a href="https://trac.mathweb.org/gemse/">Trac site</a></h2>
 
@@ -109,8 +100,7 @@ overview. Gemse helps here a little.</li>
 <ul>
 <li>is completely controlled by keyboard, a mouse is useless</li>
 <li>is similar to Vim</li>
-<li>uses Mozilla</li>
-<li>is not mature, as it is a young project (but it makes progress)</li>
+<li>is based on the Mozilla toolkit</li>
 <li>is fun</li>
 </ul>
 
