Website: Cloning git repository
Now Gemse is also available from github.

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -49,8 +49,11 @@ as XULRunner application</a> and run it with XULRunner.</li>
 <li>Get the <a href="releases/gemse_src-1-0-16.tar.gz">whole source</a>. (As
 tar ball, since the directory structure I use for development makes
 use of symbolic links.)</li>
-<li>Clone the <a href="http://git-scm.com/">git</a> repository from 
-<code>http://www.andonyar.com/rec/2008-12/gemse/repo/gemse_public.git</code></li>
+<li>Clone the <a href="http://git-scm.com/">git</a> repository with
+<pre>git clone http://www.andonyar.com/rec/2008-12/gemse/repo/gemse_public.git gemse</pre>
+or the <a href="https://github.com/uholzer/gemse">repository on github</a> with
+<pre>git clone https://github.com/uholzer/gemse.git</pre>
+</li>
 </ul>
 
 <p>(Unfortunately, since Mozilla deactivated remote XUL, the online
